# plottah

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  README_DEV.md  config.yaml  config_2.yaml  config_bank.yaml  new_version_publish.md  pyproject.toml  requirements.txt  setup.py  test.pptx  todo
.github/: testing.yaml
.github/workflows/: test_upload_to_pypi.yaml  testing.yaml  upload_to_pypi.yaml
data/: test_sample.csv
data/example_data/: test_sample.csv
data/powerpoints/: test.pptx  univariate_analyses_03_07_2023_10_43_50.pptx  ~$test.pptx
notebooks/: Demo - Custom Plot.ipynb  Demo - PlotProtocol Functionality.ipynb  Demo - Single Univariate Plot Builder.ipynb  Dev - PowerPoint Generation.ipynb  Untitled.ipynb  explorer.ipynb  legacy.ipynb  v0.1.ipynb  v0.2.ipynb  v0.3 - seperate math.ipynb  v1.0 - testing w importing.ipynb
notebooks/iframe_figures/: figure_10.html  figure_100.html  figure_102.html  figure_103.html  figure_104.html  figure_105.html  figure_106.html  figure_108.html  figure_109.html  figure_11.html  figure_110.html  figure_111.html  figure_112.html  figure_113.html  figure_115.html  figure_117.html  figure_119.html  figure_12.html  figure_121.html  figure_123.html  figure_125.html  figure_127.html  figure_129.html  figure_13.html  figure_131.html  figure_133.html  figure_135.html  figure_137.html  figure_14.html  figure_142.html  figure_143.html  figure_144.html  figure_146.html  figure_147.html  figure_148.html  figure_149.html  figure_15.html  figure_150.html  figure_151.html  figure_152.html  (+209 more)
plotta/: __main__.py  config.py  main.py
plotta/plot_builder/: builders.py
plotta/plot_handler/: PlotHandler.py
plotta/plots/: BinEventRatePlot.py  DistPlot.py  RocCurvePlot.py
plottah/: __main__.py  config.py  utils.py
plottah/plots/: DistPlot.py  (+8 more)
src/: colors.py  config.py  main.py
(+21 files in other folders)
