[tool.poetry]
name = "plottah"
version = "1.2.2"
description = "Univariate Analysis"
authors = ["Niels Ota"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = "^3.6.0"
pytest = "^8.0.0"
jupyter = "^1.0.0"
pylint = "^3.0.3"
pydantic = {extras = ["dotenv"], version = "^2.6.1"}
pyyaml = "^6.0.1"
plotly = "^5.18.0"
numpy = "^1.26.3"
pandas = "^2.2.0"
seaborn = "^0.13.1"
tqdm = "^4.66.1"
scikit-learn = "^1.4.0"
python-pptx = "^0.6.23"
kaleido = "0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
