[tool.poetry]
name = "plottah"
version = "1.2.5"
description = "Plottah: Univariate Analysis"
authors = ["Niels Ota"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^4.1.0"
pytest = "^8.0.0"
jupyter = "^1.0.0"
pylint = "^3.0.3"
pydantic = {extras = ["dotenv"], version = "^2.6.1"}
pyyaml = "^6.0.1"
plotly = "^5.18.0"
numpy = "^1.26.3"
pandas = "^2.2.0"
seaborn = "^0.13.2"
tqdm = "^4.66.1"
scikit-learn = "^1.4.0"
python-pptx = "^0.6.23"
kaleido = "0.2.1"
mypy = "^1.14.1"
ruff = "^0.9.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

